# glimmr-lite

./: .gitignore  README.md  TODOS.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: __init__.py  booking_availability.py  config.py  constants.py  error_handler.py  extensions.py  models.py  routes.py  security.py  utils.py
app/accounts/admins/: __init__.py  bookings.py  clients.py  dashboard.py  payments.py  services.py  staffs.py
app/auth/: __init__.py
app/constants/: app_emails.py  app_meta.py  email_subjects.py  service_pricing.py  services.py  templates_map.py  token_purposes.py
app/decorators/: role_required.py  verify_csrf_token.py
app/docorators/: role_required.py
app/helpers/: demo_booking_data.py
app/mixins/: token_manager.py
app/models/: Oauth.py  address.py  bookings.py  user_profile.py
app/services/: base_services.py  booking_service.py  notification_service.py  payment_service.py  user_service.py
app/static/css/: animations.css  notification.css  old-output.css  output.css  prev-output.css  primary.css
app/static/htmx/: htmx.min.js
app/static/js/: app-bkp.js  app.js  bookingActions.js  bookingData.js  bookingHandlers.js  bookingNavigation.js  bookingSteps.js  bookingSummary.js  calendar.js  clientData.js  constants.js  eventHandlers.js  formValidation.js  main.js  notification.js  payments.js  pricing.js  services.js  uiHelpers.js
app/static/lottie/: forgot_pwd.lottie  login.lottie  reset-pwd.lottie  (+1 more)
app/templates/: index-bkp.html  index.html
app/validators/: validate_csrf.py
(+124 files in other folders)
