[project]
name = "ogs-glimmr-lite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "faker>=37.4.0",
    "flask>=3.1.1",
    "flask-dance[sqla]>=7.1.0",
    "flask-htmx>=0.4.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.2",
    "nanoid>=2.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
]
